# HarmonyOS-Cases

./: README.en.md  README.md
.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
CommonAppDevelopment/: .gitignore  README.md  README_zh.md  ReadMeTemplate.md  build-profile.json5  oh-package.json5
CommonAppDevelopment/AppScope/: app.json5
CommonAppDevelopment/common/base/: Index.ets
CommonAppDevelopment/common/utils/: Index.ets  oh-package.json5
CommonAppDevelopment/doc/: MULTIDEVICE_ADAPTATION.md  README_MULTIDEVICE_ADAPTATION.md
CommonAppDevelopment/feature/addressexchange/: AddressExchange.md  BuildProfile.ets  Index.ets  README.md  README_zh.md  oh-package.json5
CommonAppDevelopment/feature/akiusepractice/: Index.ets  README.md  oh-package.json5
CommonAppDevelopment/feature/akiusepractice/src/main/cpp/: CMakeLists.txt  akiusepractice.cpp
CommonAppDevelopment/feature/akiusepractice/src/main/cpp/types/libakiusepractice/: index.d.ts  oh-package.json5
CommonAppDevelopment/feature/applicationexception/: Index.ets  README.md  hvigorfile.ts  oh-package.json5
CommonAppDevelopment/feature/barchart/: BarChart.md  BuildProfile.ets  Index.ets  README.md  oh-package.json5
CommonAppDevelopment/feature/bigfilecopy/: .gitignore  Index.ets  README.md  oh-package.json5
CommonAppDevelopment/feature/bottomdrawerslidecase/: Index.ets  README.md  oh-package.json5
CommonAppDevelopment/feature/cardswiperanimation/: Index.ets  README.md  hvigorfile.ts  oh-package.json5
CommonAppDevelopment/feature/chinesetopinyin/: Index.ets  README.md  oh-package.json5
CommonAppDevelopment/feature/citysearch/: Index.ets  README.md  oh-package.json5
CommonAppDevelopment/feature/componentinstancesharedinpages/: Index.ets  README.md  oh-package.json5
CommonAppDevelopment/feature/componentstack/: Index.ets  README.md  build-profile.json5  oh-package.json5
CommonAppDevelopment/feature/customcalendarpickerdialog/: Index.ets  README.md  oh-package.json5
CommonAppDevelopment/feature/customsafekeyboard/: Index.ets  README.md  oh-package.json5
CommonAppDevelopment/feature/customscan/: Index.ets  README.md  oh-package.json5
CommonAppDevelopment/feature/customtabbar/: Index.ets  README.md  README_zh.md  oh-package.json5
CommonAppDevelopment/feature/customview/: Index.ets  README.md  oh-package.json5
CommonAppDevelopment/feature/databaseupgrade/: Index.ets  README.md  oh-package.json5
CommonAppDevelopment/feature/decompressFile/: build-profile.json5  oh-package.json5
CommonAppDevelopment/feature/decompressfile/: Index.ets  README.md  oh-package.json5
CommonAppDevelopment/feature/etswrapper/src/main/cpp/: CMakeLists.txt  napi_init.cpp
CommonAppDevelopment/feature/etswrapper/src/main/cpp/include/: ets_wrapper.h  mock.h
CommonAppDevelopment/feature/etswrapper/src/main/cpp/src/: ets_wrapper.cpp  mock.cpp
CommonAppDevelopment/feature/etswrapper/src/main/cpp/types/libetswrapper/: index.d.ets  oh-package.json5
CommonAppDevelopment/feature/logcallback/src/main/cpp/: CMakeLists.txt  logcallback.cpp
CommonAppDevelopment/feature/logcallback/src/main/cpp/types/liblogcallback/: index.d.ts  oh-package.json5
CommonAppDevelopment/feature/nativerawfile/src/main/cpp/: CMakeLists.txt  global_handlers.cpp  hello.cpp  nativeRawFile.cpp  native_rawfile.cpp  native_rawfile_api.cpp  preloadso.cpp
CommonAppDevelopment/feature/nativerawfile/src/main/cpp/include/: global_handlers.h
CommonAppDevelopment/feature/nativerawfile/src/main/cpp/types/libnativerawfile/: index.d.ts  oh-package.json5
CommonAppDevelopment/feature/nativerawfile/src/main/cpp/types/libnativerawfileapi/: index.d.ts  oh-package.json5
CommonAppDevelopment/feature/nativerawfile/src/main/cpp/types/libpreloadso/: index.d.ts  oh-package.json5
CommonAppDevelopment/feature/nativesavepictosandbox/src/main/cpp/: CMakeLists.txt  native_picture_to_sandbox.cpp
CommonAppDevelopment/feature/nativesavepictosandbox/src/main/cpp/types/libnativesavepictosandbox/: index.d.ts  oh-package.json5
CommonAppDevelopment/hvigor/: hvigor-config.json5
docs/performance/: README.md  animation_practice.md  application-performance-analysis.md  arkUI-inspector.md  arkts-performance-improvement-recommendation.md  common-trace-using-instructions.md  efficient-concurrent-programming.md  flex-development-performance-boost.md  grid_optimization.md  high-performance-programming.md  improve-application-cold-start-speed.md  improve-application-response.md  improve-file-upload-and-download-performance.md  lazyforeach_optimization.md  list-perf-improvment.md  multi_thread_capability.md  native-threads-call-js.md  performance-optimization-using-hidumper.md  performance-optimization-using-smartperf-host.md  performance-overview.md  performance-web-import.md  profiler-allocation.md  profiler-frame.md  profiler-launch.md  profiler-snapshot.md  profiler-time.md  proper-choice-between-if-and-visibility.md  proper_state_management.md  readme-CN.md  reasonable-running-backgroundTask.md  reasonable-using-ipc.md  reduce-animation-frame-loss.md  reduce-package-size.md  reduce-view-nesting-levels.md  smartperf-editor.md  state_variable_dfx_pratice.md  swiper_optimization.md  thread_memory_shared.md  waterflow_optimization.md
(+998 files in other folders)
